@@ -48,8 +48,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
-import static io.nuls.network.utils.LoggerUtil.Log;
-
 /**
  * boot strap
  *
@@ -88,13 +86,13 @@ public class NetworkBootstrap extends RpcModule {
             networkConfig.getLocalIps().addAll(IpUtil.getIps());
         } catch (Exception e) {
             e.printStackTrace();
-            Log.error("Network NetworkBootstrap cfgInit failed", e);
+            LoggerUtil.logger().error("Network NetworkBootstrap cfgInit failed", e);
             throw new RuntimeException("Network NetworkBootstrap cfgInit failed");
         }
     }
 
     private void dbInit() throws Exception {
-        RocksDBService.init(networkConfig.getDataPath()+NetworkConstant.MODULE_DB_PATH);
+        RocksDBService.init(networkConfig.getDataPath() + NetworkConstant.MODULE_DB_PATH);
         InitDB dbService = SpringLiteContext.getBean(DbServiceImpl.class);
         dbService.initTableName();
     }
@@ -121,8 +119,7 @@ public class NetworkBootstrap extends RpcModule {
         try {
             super.init();
             System.setProperty("io.netty.tryReflectionSetAccessible", "true");
-//            --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
-//            --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+            LoggerUtil.defaultLogInit(networkConfig.getLogLevel());
             jsonCfgInit();
             dbInit();
             managerInit();
@@ -145,7 +142,7 @@ public class NetworkBootstrap extends RpcModule {
 
     @Override
     public boolean doStart() {
-        Log.debug("doStart begin=========");
+        LoggerUtil.logger().debug("doStart begin=========");
         try {
             NodeGroupManager.getInstance().start();
 //            RpcManager.getInstance().start();
@@ -153,13 +150,13 @@ public class NetworkBootstrap extends RpcModule {
             e.printStackTrace();
             System.exit(-1);
         }
-        Log.debug("doStart end=========");
+        LoggerUtil.logger().debug("doStart end=========");
         return true;
     }
 
     @Override
     public RpcModuleState onDependenciesReady() {
-        LoggerUtil.Log.info("network onDependenciesReady");
+        LoggerUtil.logger().info("network onDependenciesReady");
         try {
             ConnectionManager.getInstance().start();
             TaskManager.getInstance().start();
@@ -167,7 +164,7 @@ public class NetworkBootstrap extends RpcModule {
             e.printStackTrace();
             System.exit(-1);
         }
-        LoggerUtil.Log.info("NW RUNNING");
+        LoggerUtil.logger().info("NW RUNNING");
         return RpcModuleState.Running;
     }
 
